animated horizontal progressbar added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.inonitylab.chartandgraph"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    compile 'com.daasuu:animateHorizontalProgressBar:0.2.4'//animHorProBaar
     testCompile 'junit:junit:4.12'
 }
