--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PieChartActivity"></activity>
+        <activity android:name=".PieChartActivity" />
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".HorizontalBarChartActivity" />
-        <activity android:name=".AnimHorizontalProgressBar"></activity>
+        <activity android:name=".AnimHorizontalProgressBar" />
+        <activity android:name=".CombinedChartActivity"></activity>
     </application>
 
 </manifest>
